# pytorch-siamese

./: LICENSE  README.md  contrastive.py  pyproject.toml  test_contrastive.py  train_mnist.py
src/roux_siamese_few_shot/: net.py  train_mnist.py
tests/: test_contrastive.py  test_style.py
