[tool.poetry]
name = "roux_siamese_few_shot"
version = "0.1.0"
description = "A few-shot learning experiment using Siamese networks."
authors = ["Alexander Berger <berger.ale@northeastern.edu, alexander.berger@jax.org>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://bergsalex.github.io/geneweaver-docs/"
repository = "https://github.com/bergsalex/geneweaver-tools"
packages = [{include = "roux_siamese_few_shot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
pytest = "^7.3.2"
ruff = "^0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
